# Panda_VLA_Project

./: .gitignore  README.md  pyproject.toml
archive/experts/: scripted_pick_place copy 3.py
archive/refactor_scripts/: fix_paths_after_refactor.py  refactor_move_files.sh
learning/datasets/: add_privileged_to_zarr_from_hdf5.py  compute_zarr_stats.py  convert_hdf5_to_zarr.py  inspect_hdf5_episode.py  zarr_dataset.py
learning/diffusion_policy/: eval_bc_privileged_state_rollout.py  eval_bc_state_rollout.py  model.py  privileged_state_utils.py  train_bc_privileged_state.py  train_bc_state.py  zarr_dataset.py
mujoco_env/: test_ee_delta_controller_native.py  test_ee_delta_controller_viewer.py  test_pick_place_env_reset.py  test_pick_place_xml.py  test_scripted_pick_place_batch _5.11.py  test_scripted_pick_place_batch copy_success.py  test_scripted_pick_place_batch.py  test_scripted_pick_place_viewer copy.py  test_scripted_pick_place_viewer success.py  test_scripted_pick_place_viewer.py
mujoco_env/archive/: test_gripper_center.py  test_mujoco_panda.py  test_panda_base_env.py  test_panda_pick_place_env_base.py  view_panda_native.py  view_pick_place_native.py
mujoco_env/camera_tune/: camera_tune_front_debug_20260507_211402.txt  camera_tune_front_policy_20260507_210836.txt
mujoco_env/controllers/: ee_delta_controller copy.py  ee_delta_controller.py  ik_solver.py
mujoco_env/data/: pick_place_scripted_200.zarr_metadata.json
mujoco_env/data_collection/: collect_scripted_pick_place_hdf5.py  replay_hdf5_batch.py  replay_hdf5_episode.py
scripts/: activate_ros2_mujoco.sh
(+93 files in other folders)
