[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "panda-vla-project"
version = "0.1.0"
description = "Franka Panda MuJoCo imitation learning and VLA project"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["mujoco_env*", "learning*"]
